static/css/style.css
body {
    height: 100vh;
}

canvas {
    /*background-color: #000000;*/
    width: 100%;
    height: auto;
}

svg {
    /*background-color: antiquewhite;*/
}

.axis path,
.axis line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}

.container-fluid {
    height: 100%;
    overflow: hidden;
}

.dot {
    stroke: #000;
}

.tooltip {
    position: absolute;
    text-align: center;
    /*width: 60px;*/
    /*height: 28px;*/
    padding: 5px;
    font: 12px sans-serif;
    background: #20b2aa;
    border: 0;
    border-radius: 8px;
}

.cross-button {
    cursor: pointer;
}

.shaker {
    animation: shake 0.75s cubic-bezier(.36, .07, .19, .97) both infinite;
    /*transform: translate3d(0, 0, 0);*/
    /*backface-visibility: hidden;*/
    /*perspective: 1000px;*/
}

.translucent {
    opacity: 0.2;
}

.fobj {
    overflow: visible;
}

.btn-separator:after {
    content: '';
    display: block;
    float: left;
    background: #fffcfc;
    margin: 0 1px;
    /*height: 34px;*/
    width: 1px;
}

.axis {
    color: #6c757d;
}

.axis line {
    stroke: #6c757d;
}

.axis path {
    stroke: #6c757d;
    padding-right: 1em;
}

@keyframes shake {
    10%, 90% {
        transform: translate3d(-1px, 0, 0);
    }

    20%, 80% {
        transform: translate3d(2px, 0, 0);
    }

    30%, 50%, 70% {
        transform: translate3d(-4px, 0, 0);
    }

    40%, 60% {
        transform: translate3d(4px, 0, 0);
    }
}

.class-label {
    opacity: 0.8;
    font-size: 13px;
    font-weight: 400;
}

.point {
    opacity: 0.8;
}

.bg-dark-red{
    background-color: #2844a7;
}

.text-slightly-muted {
    color: #717171;
    font-weight: 450;
}

